--- a/blog1/templates/index.html
+++ b/blog1/templates/index.html
@@ -41,14 +41,23 @@
                       </div>
                       <div class="panel-body">
                           {{info}}
+                          <div class="col-lg-12" height="300px" id="rect1" style="margin:20px 0px 20px 0px;padding:0px">
+                          </div>
                       </div>
                   </div>
               </div>
           </div>
           {%endif%}
+          <div class="row">
+          </div>
+          <script>
+
+          </script>
       </div>
     </div>
       <script src="/static/bootstrap/js/jquery.js"></script>
+      <script src="/static/bootstrap/js/graphics.min.js"></script>
+      <script src="/static/bootstrap/js/draw.js"></script>
       <script src="/static/bootstrap/js/bootstrap.min.js"></script>
       <script src="/static/bootstrap/js/bootstrap-select.min.js"></script>
    </body>
